--- a/homework05/requirements.txt
+++ b/homework05/requirements.txt
@@ -1,3 +1,4 @@
+numpy==1.25.0
 responses==0.12.1
 requests==2.24.0
 httpretty==1.0.2
@@ -6,6 +7,6 @@ networkx==2.5
 pandas==1.1.4
 matplotlib==3.3.3
 python-louvain==0.14
-gensim==4.2.0
+gensim==4.3.2
 textacy==0.10.1
 pyLDAvis==2.1.2
